@@ -8,6 +8,8 @@ ver 0.22.10 (not yet released)
   - tidal: remove defunct unmaintained plugin
 * tags
   - fix crash caused by bug in TagBuilder and a few potential reference leaks
+* output
+  - oss: fix channel order of multi-channel files
 
 ver 0.22.9 (2021/06/23)
 * database
